{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 53,
  "lineage": "fd8aec22-d774-b47c-0032-7d2c2b62cf1e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017133020150:vpc/vpc-0daccb21a606c9ae7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01296e54711ed2822",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0f85c326690fb06d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daccb21a606c9ae7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0147ab57642035549",
            "owner_id": "017133020150"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017133020150:security-group/sg-0120437c406354206",
            "description": "Permitir trafico HTTP y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0120437c406354206",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg20250213032258471900000001",
            "name_prefix": "ec2-sg",
            "owner_id": "017133020150",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0daccb21a606c9ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017133020150:security-group/sg-0dbef0edfc1924530",
            "description": "Permitir acceso MySQL desde la EC2",
            "egress": [],
            "id": "sg-0dbef0edfc1924530",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg20250213032258482000000002",
            "name_prefix": "rds-sg",
            "owner_id": "017133020150",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0daccb21a606c9ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:017133020150:instance/i-06e16f01949deb24a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e16f01949deb24a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3575ad1813e0a05",
            "private_dns": "ip-172-31-18-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.17",
            "public_dns": "ec2-3-80-30-181.compute-1.amazonaws.com",
            "public_ip": "3.80.30.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c3a4da95b586f10c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-sg20250213032258471900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ced30a0cc4738f80",
            "tags": {
              "Name": "wordpress-ec2"
            },
            "tags_all": {
              "Name": "wordpress-ec2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "wordpress-ec2"
            },
            "vpc_security_group_ids": [
              "sg-0120437c406354206"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "data.aws_subnets.default_subnets",
            "data.aws_vpc.default_vpc",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.data.aws_partition.current",
            "module.ec2.data.aws_ssm_parameter.this",
            "module.rds.module.db_instance.aws_cloudwatch_log_group.this",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.module.db_instance.data.aws_partition.current",
            "module.rds.module.db_instance.random_id.snapshot_identifier",
            "module.rds.module.db_option_group.aws_db_option_group.this",
            "module.rds.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rds.module.db_subnet_group.aws_db_subnet_group.this"
          ]
        }
      ]
    }
  ]
}